@@ -15,6 +15,7 @@ Make nametag visible=Hacer visible nombre
 Get nametag info or set visibility=Obtener el estado de placa de nombre o establecer visibilidad
 Parameter options:=Opciones de parámetro:
 Display nametag text & visible state (default)=Mostrar texto del nombre y estado de visibilidad (defecto)
+Cannot make nametag visible while you are invisible=No se puede hacer visible nombre mientras estés invisible
 
 ERROR: Unknown parameter: @1=ERROR: Parámetro desconocido: @1
 ERROR: Could not hide nametag=ERROR: No se pudo esconder nombre
